--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 1.1rem;
+  font-size: 1.05rem;
+  line-height: 1.5; /* Improves readability */
   /* background-color: #eed9cc;
   background-color: #d5a193;
   background-color: #a46b5f;
@@ -22,11 +23,19 @@ body {
 
 /* HEADER */
 
-.welcome {
-  background-image: url(Images/Banner.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 10vmax;
+.banner {
+  width: 100%;
+  position: relative;
+  padding-top: 10%;
+}
+
+.banner img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the banner area */
 }
 
 /* NAVIGATION BAR */
@@ -62,8 +71,8 @@ nav ul li {
 
 nav ul li a {
   color: #76433e;
-  font-size: 1.1rem;
-  padding: 10px;
+  font-size: 1.2rem;
+  padding: 0.3rem 0.6rem 0.3rem 0.6rem;
   text-decoration: none;
   border: 2px solid transparent;
   transition: border-color 0.3s ease;
@@ -71,7 +80,7 @@ nav ul li a {
 
 nav ul li a:hover {
   border: 2px solid #a46b5f; /* Border style on hover */
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 .active-link {
@@ -94,7 +103,7 @@ section {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #76433e; /* Soft pastel variant of #cdbcb5 */
 }
 
@@ -114,7 +123,7 @@ h2 {
   overflow: hidden;
   transition: transform 0.3s, box-shadow 0.3s;
   background: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
 
@@ -175,7 +184,7 @@ h2 {
 
 .card:hover {
   transform: scale(1.1);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .card:hover .card-overlay::before {
@@ -271,24 +280,26 @@ h2 {
 footer {
   background-color: #a46b5f;
   color: #eed9cc;
-  padding: 20px;
+  padding: 1rem;
   text-align: center;
 }
 
 #visit {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 #address,
 #contact,
-.social {
-  padding: 10px;
+.social p {
+  font-size: 1.2rem;
+  padding: 0.6rem;
 }
 
-footer a {
+footer i {
+  font-size: 1.2rem;
   color: #eed9cc;
   text-decoration: none;
-  padding: 5px;
+  padding: 0.3rem;
 }
